--- a/Lab2Live/02-data.qmd
+++ b/Lab2Live/02-data.qmd
@@ -238,26 +238,6 @@ This is why we also see the warning telling us that the length of `letters` is n
 :::
 :::
 
-<!-- dimensions of matrices -->
-
-To check the dimensions of a matrix (or an array), we use the function `dim()`. For matrices, this will return a vector of length 2 where the first value is the number of rows and the second value is the number of columns.
-
-For example we can see that `M1` has 6 rows and 4 columns using the following code.
-
-::: panel-tabset
-## R Code
-
-```{r mat6.1, eval = FALSE}
-dim(M1)
-```
-
-## Output
-
-```{r mat6.2, echo = FALSE}
-dim(M1)
-```
-:::
-
 ### Naming rows and columns {.unnumbered}
 
 <!-- row/column names of matrices using dimnames() -->
@@ -282,13 +262,16 @@ dimnames(birth.table) <- list(cities, years)
 kable(birth.table)
 ```
 
-We can create a matrix containing these values and then name the rows and columns using the following code.
+We can first of all create a matrix `births` containing these values and then we can name the rows and columns.
 
 ::: panel-tabset
 ## R Code
 
 ```{r mat7.1, eval = FALSE}
-data <- c(5033, 4899, 4683, 6852, 6548, 6553, 2402, 2337, 2260, 1493, 1488, 1417)
+data <- c(5033, 4899, 4683,
+          6852, 6548, 6553, 
+          2402, 2337, 2260, 
+          1493, 1488, 1417)
 
 births <- matrix(data = data, nrow = 4, byrow = TRUE)
 
@@ -464,126 +447,6 @@ It is then easy to see that the standard deviation for 2019 is `r round(apply(X 
 :::
 :::
 
-### Vector/Matrix multiplication {.unnumbered}
-
-R can be used to complete vector and matrix multiplication. The operator used for this is `%*%`. For example, for the following matrix and vector,
-
-$$
-\boldsymbol{X}=\begin{bmatrix}2&4&-1\\3&2&2\\1&2&-1\end{bmatrix},\,\,\,\,\boldsymbol{y}=\begin{bmatrix}1\\1\\3\end{bmatrix}
-$$
-
-The solution to $\boldsymbol{X}\times\boldsymbol{y}$ can be found using the following code.
-
-::: panel-tabset
-## R Code
-
-```{r mat12.1, eval = FALSE}
-X <- matrix(data = c(2, 4, -1, 3, 2, 2, 1, 2, -1), nrow = 3, byrow = TRUE)
-y <- matrix(data = c(1, 1, 3), nrow = 3, byrow = TRUE)
-
-X%*%y
-```
-
-## Output
-
-```{r mat12.2, echo = FALSE}
-X <- matrix(data = c(2, 4, -1, 3, 2, 2, 1, 2, -1), nrow = 3, byrow = TRUE)
-y <- matrix(data = c(1, 1, 3), nrow = 3, byrow = TRUE)
-
-X%*%y
-```
-:::
-
-If instead we wanted to calculate $\boldsymbol{y}^\intercal\times\boldsymbol{X}$ we would first have to transpose `y`. Matrices can be transposed using the function `t()`.
-
-::: panel-tabset
-## R Code
-
-```{r mat13.1, eval = FALSE}
-t(y)%*%X
-```
-
-## Output
-
-```{r mat13.2, echo = FALSE}
-t(y)%*%X
-```
-:::
-
-R can also be used to solve a system of equations. For example, we have just seen that,
-
-$$
-\begin{aligned}
-(2\times 1)+(4\times 1)+(-1\times 3)&=3\\
-(3\times 1)+(2\times 1)+(2\times 3)&=11\\
-(1\times 1)+(2\times 1)+(-1\times 3)&=0
-\end{aligned}
-$$
-
-But suppose we didn't know the vector $\boldsymbol{y}$, and instead were given the system of equations,
-
-$$
-\begin{aligned}
-2x+4y-z&=3\\
-3x+2y+2z&=11\\
-x+2y-z&=0
-\end{aligned}
-$$
-
-This can also be represented as,
-
-$$
-\boldsymbol{Xy}=\boldsymbol{z},\,\mbox{ where }
-\boldsymbol{X}=\begin{bmatrix}2&4&-1\\3&2&2\\1&2&-1\end{bmatrix},\,\,\,\,\boldsymbol{y}=\begin{bmatrix}x\\y\\z\end{bmatrix},\mbox{ and }\boldsymbol{z}=\begin{bmatrix}3\\11\\0\end{bmatrix}
-$$
-
-We can then use R to solve this system of equations using the `solve()` function. We need to give `solve()` the matrix of coefficients, $\boldsymbol{X}$, and the vector $\boldsymbol{z}$.
-
-::: panel-tabset
-## R Code
-
-```{r mat14.1, eval = FALSE}
-z <- matrix(data = c(3, 11, 0), nrow = 3, byrow = TRUE)
-
-solve(X, z)
-```
-
-## Output
-
-```{r mat14.2, echo = FALSE}
-z <- matrix(data = c(3, 11, 0), nrow = 3, byrow = TRUE)
-
-solve(X, z)
-```
-:::
-
-This then gives the solution $\boldsymbol{y}=\begin{bmatrix}1&1&3\end{bmatrix}^\intercal$, which is what we expected to see.
-
-It is also possible to use the `solve()` function to simply find the inverse of a matrix. This is done by providing it with only one argument - the matrix to be inverted. For example, the code below returns the inverse of the matrix $X$.
-
-::: panel-tabset
-## R Code
-
-```{r mat15.1, eval = FALSE}
-solve(X)
-```
-
-## Output
-
-```{r mat15.2, echo = FALSE}
-solve(X)
-```
-:::
-
-We can see that,
-
-$$
-\boldsymbol{X}^{-1}=\begin{bmatrix}-1.50&0.50&2.50\\1.25&-0.25&-1.75\\1.00&0.00&-2.00\end{bmatrix}
-$$
-
-------------------------------------------------------------------------
-
-There are additional details and examples of using matrices in R in Sections **1.9.1 Arrays and Matrices** and **1.9.2 Vector and Matrix Operations** of *Probability and Statistics with R*.
 
 ## Factors {#sec-fact}
 
@@ -746,7 +609,7 @@ Data frames in R are very similar to matrices. The key difference however is tha
 
 Data frames are a very common type of data structure used within R. Most of the data you will see saved in packages, or the data you will use for fitting statistical models will be saved in a data frame.
 
-To create a data frame, we can use the function `data.frame()`. The only arguments needed are the pre-existing vectors, which all need to be of the same length, that you want to save within the data frame. Some additional arguments include:
+To create a data frame, we can use the function `data.frame()`. The only arguments needed are the pre-existing vectors that you want to save within the data frame. These all need to be of the same length. Some additional arguments include:
 
 -   `stringAsFactor =`: this takes the values `TRUE` or `FALSE` and tells R whether any character vectors should be turned into factors. If this argument is excluded, R takes the default value to be `FALSE`, so character vectors will kept as they are.
 -   `row.names =`: this can be a vector of names you wish to use for the rows of the data frame. By default, R will just number the rows starting from 1.
@@ -832,6 +695,8 @@ str(performance)
 str(performance)
 ```
 :::
+
+### Extracting elements {.unnumbered}
 
 Elements from data frames can be extracted in a couple of ways. For example, we can use square brackets `[ ]`, or we can use the dollar sign operator `$`.
 
@@ -953,6 +818,8 @@ The `attach()` function is useful if you are going to be using the same data fra
 detach(performance)
 ```
 :::
+
+### Using packages {.unnumbered}
 
 When conducting statistical analysis, you won't often need to create your own data frame of information from scratch - it will most likely already exist in some format somewhere! One place where data might be stored is in the packages you can install and load into R.
 
