--- a/Lab2/05-dimensions.qmd
+++ b/Lab2/05-dimensions.qmd
@@ -1,6 +1,7 @@
 # Dimensions of matrices {#sec-dim}
 
 ```{r births, echo = FALSE}
+vect <- 1:24
 M1 <- array(data = vect, dim = c(6, 4))
 
 data <- c(5033, 4899, 4683, 6852, 6548, 6553, 2402, 2337, 2260, 1493, 1488, 1417)
