Add kortext link

--- a/Lab3Live/index.qmd
+++ b/Lab3Live/index.qmd
@@ -44,3 +44,5 @@ This is where the question text would go.
 
 Welcome to the third S2S lab. This lab builds on what we already know about data frames and will teach you how to save data files of different types in RStudio and then manipulate them in several ways, such as creating new variables, working with a subset of a larger data frame or merging together data from different sources. Working with data is a key skill throughout statistics and it will often be saved as a data frame, so it is important to know all the things that can be done with them.
 
+We'll follow along [Section 1.11 Working with Data](https://read.kortext.com/reader/pdf/92741/47){target="_blank"} to learn to manipulate data sets.
+
