Sort links to sections in summary page, add solutions to functions tasks & reorder solutions boxes

--- a/Lab5/02-functions.qmd
+++ b/Lab5/02-functions.qmd
@@ -15,7 +15,7 @@ library(tidyverse)
 
 We have already seen and used many R functions. Now we are going to learn about some more statistics specific functions, as well as how to write our own functions which will give us a lot of flexibility with what we can do in R.
 
-## Probability functions
+## Probability functions {#sec-prob-func}
 
 There are a range of functions we can use which make working with statistical distributions a lot easier. We are able to generate random numbers from a distribution, calculate cumulative probabilities, compute densities and return quantiles with them.
 
@@ -57,7 +57,8 @@ qnorm(0.975)
 ::::{.question-header}
 Task
 ::::
-::::{.question-container .webex-check}
+::::{.question-container}
+::::{.webex-check}
 ```{r func-ans1.1, echo=FALSE}
 opts1 <- c("`rnorm`", "`pnorm`", "`dnorm`", answer="`qnorm`")
 opts2 <- c("`rnorm`", "`pnorm`", "`dnorm`", answer="`qnorm`")
@@ -92,8 +93,8 @@ Choose the correct function and complete the code for the following scenarios.
 `r mcq(opts3)``(``r fitb(c(-2, "q=-2"))``, mean = 0, sd =``r fitb(2)``)`
 :::
 :::
+::::
 
-<!--
 `r hide("Solution")`
 * You want to construct a 90% confidence interval so need to know the 95^th^ quantile of the standard normal distribution.
 
@@ -122,7 +123,7 @@ pnorm(q = -2, mean = 0, sd = 2)
 ```
 :::
 `r unhide()`
--->
+
 ::::
 :::
 
@@ -161,7 +162,7 @@ kable(dist_table, format = "markdown")
 To read more, see **Section 1.15 Probability Functions** in *Probability and Statistics with R*.
 
 
-## Creating functions
+## Creating functions {#sec-create-func}
 
 So far we have used a number of in built functions in R. It is also possible to create your own functions, specifying the required arguments and what it does.
 
