--- a/Lab5Live/01-samplingdist.qmd
+++ b/Lab5Live/01-samplingdist.qmd
@@ -131,7 +131,7 @@ samples_w <- cbind(samples_w, Mean = sample_w_means, Variance = sample_w_varianc
 ```
 :::
 
-The information in the data frame `samples_w` is summarised in Table @tbl-sampletab-with.
+The information in the data frame `samples_w` is summarised in @tbl-sampletab-with.
 
 ```{r sampletab-with-setup, echo=FALSE}
 combs1 <- c("(1, 1)", "(2, 1)", "(3, 1)", "(4, 1)", "(5, 1)", "(6, 1)",
@@ -146,8 +146,8 @@ sampletab_w <- data.frame(combinations1 = combs1, Mean1 = sample_w_means[1:12],
                         Variance2 = sample_w_variances[13:24],
                         combinations3 = combs3, Mean3 = sample_w_means[25:36],
                         Variance3 = sample_w_variances[25:36])
-names(sampletab_w) <- c("$(x_1,\\,x_2)$", "Mean", "Variance", "$(x_1,\\,x_2)$", "Mean", "Variance",
-                      "$(x_1,\\,x_2)$", "Mean", "Variance")
+names(sampletab_w) <- c("\\((x_1,\\,x_2)\\)", "Mean", "Variance", "\\((x_1,\\,x_2)\\)", "Mean", "Variance",
+                      "\\((x_1,\\,x_2)\\)", "Mean", "Variance")
 ```
 
 ```{r sampletab-with, echo=FALSE}
@@ -188,7 +188,7 @@ For example, $\bar X$ is equal to 1.5 on two occasions (if the balls drawn are (
 The sampling distribution for $\bar X$ is also given in @tbl-Xbar-dist-with.
 
 ```{r Xbar-dist-with, echo=FALSE}
-#| tbl-cap: "Sampling distribution for $\bar{X}$."
+#| tbl-cap: "Sampling distribution for $\\bar{X}$."
 #| label: tbl-Xbar-dist-with
 
 kable(data.frame(X = seq(1, 6, by = 0.5), prob = round(as.vector(samplingdist_mean_w), 4)),
@@ -499,7 +499,7 @@ This tells us that, when sampling two balls from the bag of six without replacem
 The sampling distribution for $\bar X$ is also given in @tbl-Xbar-dist-wo.
 
 ```{r Xbar-dist-wo, echo=FALSE}
-#| tbl-cap: "Sampling distribution for $\bar{X}$."
+#| tbl-cap: "Sampling distribution for $\\bar{X}$."
 #| label: tbl-Xbar-dist-wo
 
 kable(data.frame(X = seq(1.5, 5.5, by = 0.5), prob = round(as.vector(samplingdist_mean_wo), 4)),
@@ -705,12 +705,12 @@ We can summarise all of the results we've seen so far about the sampling distrib
 ```{r summ-tab-setup, echo=FALSE}
 summ_tab <- data.frame(mean_x = rep(3.5, 2),
                        var_x = rep(2.9167, 2),
-                       E_xbar = c(paste(as.numeric(mean_Xbar_w), "\\(=\\mu_X\\)"), 
-                                  paste(as.numeric(mean_Xbar_wo), "\\(=\\mu_X\\)")),
-                       var_xbar = c(paste(round(as.numeric(var_Xbar_w), 4), "\\(=\\frac{\\sigma_X^2}{n}\\)"),
-                                    paste(round(as.numeric(var_Xbar_wo), 4), "\\(=\\frac{\\sigma_X^2}{n}\\cdot\\frac{N-n}{N-1}\\)")),
-                       E_s2 = c(paste(round(as.numeric(mean_S2_w), 4), "\\(=\\sigma_X^2\\)"),
-                                paste(round(as.numeric(mean_S2_wo), 1), "\\(=\\frac{N}{N-1}\\cdot\\sigma_X^2\\)")))
+                       E_xbar = c(paste(as.numeric(mean_Xbar_w), "\(=\mu_X\)"), 
+                                  paste(as.numeric(mean_Xbar_wo), "\(=\mu_X\)")),
+                       var_xbar = c(paste(round(as.numeric(var_Xbar_w), 4), "\(=\frac{\sigma_X^2}{n}\)"),
+                                    paste(round(as.numeric(var_Xbar_wo), 4), "\(=\frac{\sigma_X^2}{n}\cdot\frac{N-n}{N-1}\)")),
+                       E_s2 = c(paste(round(as.numeric(mean_S2_w), 4), "\(=\sigma_X^2\)"),
+                                paste(round(as.numeric(mean_S2_wo), 1), "\(=\frac{N}{N-1}\cdot\sigma_X^2\)")))
 rownames(summ_tab) <- c("With replacement", "Without replacement")
 ```
 
